--- a/theme/src/scss/_typography.scss
+++ b/theme/src/scss/_typography.scss
@@ -242,8 +242,8 @@ mark {
 }
 
 ::selection {
-  background-color: var(--color-gray-900);
-  color: var(--color-white);
+  background-color: var(--color-bg-inverse);
+  color: var(--color-text-inverse);
 }
 
 // --------------------------------------------------------------------------
